# actix-simple-api

./: .env.dist  Cargo.toml  README.md  actix-simple-api.postman_collection.json
migrations/2021-07-03-165301_add_products/: down.sql  up.sql
src/: actions.rs  handlers.rs  main.rs  schema.rs
src/actions/: home.rs  product.rs  products.rs  sales.rs
src/models/: product.rs
src/repositories/: product.rs
