[package]
name = "actix-simple-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
r2d2 = "0.8.8"
diesel = { version = "1.4.4", features = ["r2d2", "mysql"] }
dotenv = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"